src/test/deca/syntax/invalid/renduInter01/01missing_if.deca
{
    int x = 4;
    else (x == 4) {
        println("hello else_if2 : ", x);
    }

}